fix: fix wrong font-sizes (Thu, Jun 22, 2023)

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@ body {
   font-weight: 700;
   align-items: center;
   justify-content: center;
- 
+
 }
 
 button {
@@ -77,6 +77,10 @@ button {
     font-size: 1rem;
     text-align: center;
   }
+
+  & > ul {
+    width: 100%;
+  }
 }
 
 ul {
@@ -99,6 +103,11 @@ hr {
     display: flex;
     gap: 8px;
     align-items: center;
+    font-size: 1rem;
+  }
+
+  p {
+    font-size: 1rem;
   }
 
   hr {
@@ -148,6 +157,7 @@ hr {
   display: flex;
   gap: 8px;
   align-items: center;
+  font-size: 1rem;
 
   button {
     background: none;
